# cloudformation-stack-cleanup

./: .gitignore  README.md  pyproject.toml
cfncli/: __init__.py  exceptions.py  helpers.py
cfncli/cli/: cleanup_environment.py  cli.py
samples/: sample-cfn-stack.yaml
tests_cfncli/: conftest.py  test_helpers.py
